tests/_support/override/classes/error/ErrorDescription.php
<?php

namespace Thirtybees\Core\Error;

class ErrorDescription extends ErrorDescriptionCore
{

}
